<resources>
    <string name="app_name">ListViewDemo</string>

    <string name="menu_add_item">add</string>
    <string name="menu_delete_item">delete</string>

    <string name="menu_array_adapter">ArrayAdapter</string>
    <string name="menu_simple_adapter">SimpleAdapter</string>
    <string name="menu_custom_adapter">CustomAdapter</string>


    <string name="menu_auto_hide_actionbar">AutoHideAb</string>


</resources>
