<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="1"
        android:title="@string/menu_add_item"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_delete_item"
        android:orderInCategory="2"
        android:title="@string/menu_delete_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_array_adapter"
        android:orderInCategory="3"
        android:title="@string/menu_array_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_simple_adapter"
        android:orderInCategory="4"
        android:title="@string/menu_simple_adapter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_custom_adapter"
        android:orderInCategory="5"
        android:title="@string/menu_custom_adapter"
        app:showAsAction="never" />

</menu>
